--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  text-align: left;
+ /* background: linear-gradient( 138deg, #000000e8, #29296E 26%,#1b1409d7 90%), url(); */
+  background: linear-gradient(138deg, #000000e8, #29296e 26%, #1b1409d7 90%);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  box-sizing: border-box;
+}
+
+.App::before{
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: .013;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('./assets/banner.jpeg');
+}
+
+.nomination-container {
+  background: linear-gradient(138deg, #212158e1, #1b1409e1 80%);
+  position: fixed;
+  width: 100% !important;
+  bottom: -2000px;
+  min-height: auto !important;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  transition: 0.3s 0.2s ease-in-out;
+}
+
+.notication__container {
+  background: linear-gradient(138deg, #b4194d, #e91e63 80%);
+  position: fixed;
   color: white;
+  bottom: -2000px;
+  min-height: auto !important;
+  padding-top: 20px !important;
+  padding-bottom: 70px !important;
+  /* box-shadow: 0px -10px 30px #2c020fec; */
+  transition: 0.3s 0.2s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+.notication__container.show {
+  bottom: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.layout {
+  display: flex;
+}
+
+.nomination-container.show {
+  bottom: 0px;
+}
+
+h1,h2,
+p {
+  color: #fff;
+  margin: 0;
+}
+
+h1 {
+  font-size: 3em;
+}
+.search__containter {
+  width: 50%;
+}
+.search__containter > h1 {
+  margin: 0;
+}
+
+.nomination__instruction {
+  font-size: 1.2em;
+  color: #b5b5c4e1;
+  margin-bottom: 40px;
+  margin-top: 10px;
+}
+
+.open-nominations {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 1.3em;
+  font-weight: 100;
+  outline: none;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  transition: 0.3s ease-in-out;
+}
+
+.open-nominations.hide {
+  display: none;
+  right: -2000px;
+}
+
+@media (max-width: 991.98px) {
+  .layout {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .nomination-container {
+    position: static;
+  }
+
+  .search__containter {
+    width: auto;
   }
 }
